BuildHughes/translation-tool/inputs/source_meta/objects/Partner_PDV_User__c.object
<CustomObject>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.Partner_Type__c</field>
                <operation>equals</operation>
                <value>Dealer - DDO, Dealer - DDO &amp; Fulfillment, Distributor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner PDV Users</relationshipLabel>
        <relationshipName>Partner_PDV_Users</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_PDV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner PDV</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Partner_PDV__c.Partner_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Partner_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Partner_PDV__c</referenceTo>
        <relationshipLabel>Partner PDV Users</relationshipLabel>
        <relationshipName>Partner_PDV_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Partner_Account__c</field>
                <operation>equals</operation>
                <valueField>User.Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Partner_PDV_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Partner PDV User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PPDVUS-{000000}</displayFormat>
        <label>Partner PDV User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner PDV Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>